# ferriscord

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
examples/basic_bot/: ferris.rs  main.rs
ferriscord_derive/: Cargo.toml
ferriscord_derive/src/: lib.rs
src/: lib.rs
src/connection/: callback_context.rs  discord_connection.rs  mod.rs
src/discord_datatypes/: mod.rs
